--- a/indecision/package.json
+++ b/indecision/package.json
@@ -20,13 +20,16 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "hoek": "^5.0.3",
     "live-server": "^1.2.0",
     "node-sass": "^4.9.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-modal": "^3.4.5",
-    "sass-loader": "6.0.6",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "typeface-montserrat": "0.0.54",
     "validator": "^10.4.0",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
